--- a/index.html
+++ b/index.html
@@ -7,34 +7,9 @@
   <title>Bishworang | Bishworang</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
 
-  <style>
-    .footer-pragraph p strong {
-      color: #909090;
-    }
-
-    #myBtn {
-      display: none;
-      position: fixed;
-      bottom: 20px;
-      right: 30px;
-      z-index: 99;
-      font-size: 18px;
-      border: none;
-      outline: none;
-      background-color: blue;
-      color: white;
-      cursor: pointer;
-      padding: 15px;
-      border-radius: 4px;
-      transition: 0.7s;
-    }
-
-    #myBtn:hover {
-      background-color: black;
-      color: #fff;
-    }
-  </style>
+  
 
 </head>
 
@@ -42,34 +17,35 @@
 
   <!-- mneu bar -->
 
-  <nav class="navbar navbar-expand-lg bg-white navbar-light d-flex align-items-center d-lg-block d-sm-none d-none">
+  <!-- First Navbar -->
+<nav class="navbar navbar-expand-lg bg-transparent navbar-light d-flex align-items-center d-lg-block d-sm-none d-none">
     <div class="container-fluid">
       <div class="col-md-12 d-flex justify-content-between flex-row align-items-center">
         <div class="menu col-md-5 ms-5 ps-5">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link text-black text-uppercase active" href="#">bishawrong</a>
+              <a class="nav-link text-white text-uppercase active" href="#">bishawrong</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-black text-uppercase" href="#">sraddha</a>
+              <a class="nav-link text-white text-uppercase" href="#">sraddha</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-black text-uppercase" href="#">Br Code</a>
+              <a class="nav-link text-white text-uppercase" href="#">Br Code</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-black text-uppercase" href="#">biye barir golpo</a>
+              <a class="nav-link text-white text-uppercase" href="#">biye barir golpo</a>
             </li>
           </ul>
         </div>
         <div class="contact col-md-6">
           <ul class="navbar-nav justify-content-end">
             <li class="nav-item">
-              <a class="nav-link text-black text-uppercase" href="#">
+              <a class="nav-link text-white text-uppercase" href="#">
                 <i class="bi bi-telephone"></i> 01730068036
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-black text-uppercase" href="#">
+              <a class="nav-link text-white text-uppercase" href="#">
                 <i class="bi bi-geo-alt"></i>Our Outlets
               </a>
             </li>
@@ -79,8 +55,8 @@
     </div>
 
   </nav>
-  <nav class="navbar navbar-expand-lg bg-white navbar-light d-flex align-items-center sticky-top">
-    <div class="container-fluid">
+  <nav class="navbar navbar-expand-lg bg-transparent text-white navbar-light d-flex align-items-center sticky-top">
+    <div class=" text-white container-fluid">
       <div class="col-md-12 align-items-center d-flex justify-content-sm-between w-100 justify-content-between">
 
         <div class="logo col-md-1">
@@ -92,19 +68,19 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav justify-content-end w-100">
+          <div class="collapse navbar-collapse justify-content-between align-items-center mt-5 " id="collapsibleNavbar">
+            <ul class="navbar-nav justify-content-end  w-100">
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-uppercase text-black" href="#" role="button"
+                <a class="nav-link dropdown-toggle text-uppercase text-white" href="#" role="button"
                   data-bs-toggle="dropdown">men</a>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu w-100">
                   <li><a class="dropdown-item  text-uppercase text-black" href="#">shirt</a></li>
                   <li><a class="dropdown-item  text-uppercase text-black" href="#">jeans</a></li>
                   <li><a class="dropdown-item  text-uppercase text-black" href="#">t-shirt</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-uppercase text-black" href="#" role="button"
+                <a class="nav-link dropdown-toggle text-uppercase text-white" href="#" role="button"
                   data-bs-toggle="dropdown">women</a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item  text-uppercase text-black" href="#">borkha</a></li>
@@ -113,7 +89,7 @@
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-uppercase text-black" href="#" role="button"
+                <a class="nav-link dropdown-toggle text-uppercase text-white" href="#" role="button"
                   data-bs-toggle="dropdown">kids</a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item  text-uppercase text-black" href="#">jeans</a></li>
@@ -124,25 +100,25 @@
             </ul>
           </div>
         </div>
-        <div class="icons col-md-4 d-flex justify-content-end d-sm-none d-lg-flex d-none">
-          <ul class="navbar-nav">
+        <div class="icons col-md-4 mt-4 d-flex justify-content-end d-sm-none d-lg-flex d-none">
+          <ul class="navbar-nav text-white">
             <li class="nav-item">
-              <a class="nav-link text-black text-uppercase active" href="#">
+              <a class="nav-link text-white text-uppercase active" href="#">
                 <i class="bi bi-search"></i>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-black text-uppercase" href="#">
+              <a class="nav-link text-white text-uppercase" href="#">
                 <i class="bi bi-heart"></i>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-black text-uppercase" href="#">
+              <a class="nav-link text-white text-uppercase" href="#">
                 <i class="bi bi-bag"></i>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-black text-uppercase" href="#">
+              <a class="nav-link text-white text-uppercase" href="#">
                 <i class="bi bi-person"></i>
               </a>
             </li>
