--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
   <!-- mneu bar -->
 
   <!-- First Navbar -->
-<nav class="navbar navbar-expand-lg bg-transparent navbar-light d-flex align-items-center d-lg-block d-sm-none d-none">
-    <div class="container-fluid">
+<header class="sticky-top">
+  <nav class="navbar navbar-expand-lg bg-transparent navbar-light d-flex align-items-center d-lg-block d-sm-none d-none">
+    <div class="container-fluid  ">
       <div class="col-md-12 d-flex justify-content-between flex-row align-items-center">
         <div class="menu col-md-5 ms-5 ps-5">
           <ul class="navbar-nav">
@@ -55,12 +56,12 @@
     </div>
 
   </nav>
-  <nav class="navbar navbar-expand-lg bg-transparent text-white navbar-light d-flex align-items-center sticky-top">
+  <nav class="navbar navbar-expand-lg bg-transparent text-white navbar-light d-flex align-items-center ">
     <div class=" text-white container-fluid">
       <div class="col-md-12 align-items-center d-flex justify-content-sm-between w-100 justify-content-between">
 
         <div class="logo col-md-1">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.html">
             <img src="./img/logo/bride.webp" width="60" height="55" alt="">
           </a>
         </div>
@@ -127,6 +128,7 @@
       </div>
 
   </nav>
+</header>
 
   <!-- slider  -->
 
