--- a/blog.html
+++ b/blog.html
@@ -96,7 +96,7 @@
             <div class="col-md-12 align-items-center d-flex justify-content-sm-between w-100 justify-content-between">
 
                 <div class="logo col-md-1">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="./index.html">
                         <img src="./img/logo/bride.webp" width="60" height="55" alt="">
                     </a>
                 </div>
@@ -108,7 +108,7 @@
                     <div class="collapse navbar-collapse" id="collapsibleNavbar">
                         <ul class="navbar-nav justify-content-end w-100">
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle text-uppercase text-black" href="#" role="button"
+                                <a class="nav-link dropdown-toggle text-uppercase text-black" href="./men.html" role="button"
                                     data-bs-toggle="dropdown">men</a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item  text-uppercase text-black" href="#">shirt</a></li>
