--- a/men.html
+++ b/men.html
@@ -117,28 +117,28 @@
         <div class="menu col-md-5 ms-5 ps-5">
           <ul class="navbar-nav ps-5">
             <li class="nav-item">
-              <a class="nav-link text-white text-uppercase active" href="#">bishawrong</a>
+              <a class="nav-link text-black text-uppercase active" href="#">bishawrong</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white text-uppercase" href="#">sraddha</a>
+              <a class="nav-link text-black text-uppercase" href="#">sraddha</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white text-uppercase" href="#">Br Code</a>
+              <a class="nav-link text-black text-uppercase" href="#">Br Code</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white text-uppercase" href="#">biye barir golpo</a>
+              <a class="nav-link text-black text-uppercase" href="#">biye barir golpo</a>
             </li>
           </ul>
         </div>
         <div class="contact col-md-6">
           <ul class="navbar-nav justify-content-end">
             <li class="nav-item">
-              <a class="nav-link text-white text-uppercase" href="#">
+              <a class="nav-link text-black text-uppercase" href="#">
                 <i class="bi bi-telephone"></i> 01730068036
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white text-uppercase" href="#">
+              <a class="nav-link text-black text-uppercase" href="#">
                 <i class="bi bi-geo-alt"></i>Our Outlets
               </a>
             </li>
@@ -164,7 +164,7 @@
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav justify-content-end w-100">
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-uppercase text-white nav-links-items" href="./men.html" role="button"
+                <a class="nav-link dropdown-toggle text-uppercase text-black nav-links-items" href="./men.html" role="button"
                   data-bs-toggle="dropdown">men</a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item  text-uppercase text-black" href="#">shirt</a></li>
@@ -173,7 +173,7 @@
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-uppercase text-white nav-links-items" href="#" role="button"
+                <a class="nav-link dropdown-toggle text-uppercase text-black nav-links-items" href="#" role="button"
                   data-bs-toggle="dropdown">women</a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item  text-uppercase text-black" href="#">borkha</a></li>
@@ -182,7 +182,7 @@
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-uppercase text-white nav-links-items" href="#" role="button"
+                <a class="nav-link dropdown-toggle text-uppercase text-black nav-links-items" href="#" role="button"
                   data-bs-toggle="dropdown">kids</a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item  text-uppercase text-black" href="#">jeans</a></li>
@@ -196,22 +196,22 @@
         <div class="icons col-md-4 d-flex justify-content-end d-sm-none d-lg-flex d-none">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link text-white text-uppercase active" href="#">
+              <a class="nav-link text-black text-uppercase active" href="#">
                 <i class="bi bi-search"></i>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white text-uppercase" href="#">
+              <a class="nav-link text-black text-uppercase" href="#">
                 <i class="bi bi-heart"></i>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white text-uppercase" href="#">
+              <a class="nav-link text-black text-uppercase" href="#">
                 <i class="bi bi-bag"></i>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white text-uppercase" href="#">
+              <a class="nav-link text-black text-uppercase" href="#">
                 <i class="bi bi-person"></i>
               </a>
             </li>
