--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav justify-content-end w-100">
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-uppercase text-white nav-links-items" href="./men.html" role="button"
+                <a class="nav-link dropdown-toggle text-uppercase text-white nav-links-items" href="men.html" role="button"
                   data-bs-toggle="dropdown">men</a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item  text-uppercase text-black" href="#">shirt</a></li>
+                  <li><a class="dropdown-item  text-uppercase text-black" href="men.html">shirt</a></li>
                   <li><a class="dropdown-item  text-uppercase text-black" href="#">jeans</a></li>
                   <li><a class="dropdown-item  text-uppercase text-black" href="#">t-shirt</a></li>
                 </ul>
