--- a/men.html
+++ b/men.html
@@ -153,7 +153,7 @@
       <div class="col-md-12 align-items-center d-flex justify-content-sm-between w-100 justify-content-between">
 
         <div class="logo col-md-1">
-          <a class="navbar-brand" href="./index.html">
+          <a class="navbar-brand" href="index.html">
             <img id="image" src="./img/logo/bride.webp" width="60" height="55" alt="">
           </a>
         </div>
@@ -164,10 +164,10 @@
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav justify-content-end w-100">
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-uppercase text-black nav-links-items" href="./men.html" role="button"
+                <a class="nav-link dropdown-toggle text-uppercase text-black nav-links-items" href="" role="button"
                   data-bs-toggle="dropdown">men</a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item  text-uppercase text-black" href="#">shirt</a></li>
+                  <li><a class="dropdown-item  text-uppercase text-black" href="men.html">shirt</a></li>
                   <li><a class="dropdown-item  text-uppercase text-black" href="#">jeans</a></li>
                   <li><a class="dropdown-item  text-uppercase text-black" href="#">t-shirt</a></li>
                 </ul>
@@ -374,7 +374,7 @@
                   <button class="btn btn-warning add-cart position-absolute">Add to cart</button>
                 </div>
                 <div class="card-body">
-                  <h6 class="mb-1">Shirt</h6>
+                  <h6 class="mb-1">Panjabi</h6>
                   <p class="mb-0 text-muted">৳ 1,990</p>
                 </div>
               </div>
@@ -387,7 +387,7 @@
                   <button class="btn btn-warning add-cart position-absolute">Add to cart</button>
                 </div>
                 <div class="card-body">
-                  <h6 class="mb-1">Shirt</h6>
+                  <h6 class="mb-1">Panjabi</h6>
                   <p class="mb-0 text-muted">৳ 1,990</p>
                 </div>
               </div>
@@ -402,7 +402,7 @@
                   <button class="btn btn-warning add-cart position-absolute">Add to cart</button>
                 </div>
                 <div class="card-body">
-                  <h6 class="mb-1">Punjabi</h6>
+                  <h6 class="mb-1">Shirt</h6>
                   <p class="mb-0 text-muted">৳ 3,250</p>
                 </div>
               </div>
@@ -415,7 +415,7 @@
                   <button class="btn btn-warning add-cart position-absolute">Add to cart</button>
                 </div>
                 <div class="card-body">
-                  <h6 class="mb-1">Punjabi</h6>
+                  <h6 class="mb-1">Panjabi</h6>
                   <p class="mb-0 text-muted">৳ 2,999</p>
                 </div>
               </div>
@@ -428,7 +428,7 @@
                   <button class="btn btn-warning add-cart position-absolute">Add to cart</button>
                 </div>
                 <div class="card-body">
-                  <h6 class="mb-1">Shirt</h6>
+                  <h6 class="mb-1">Panjabi</h6>
                   <p class="mb-0 text-muted">৳ 900</p>
                 </div>
               </div>
@@ -441,7 +441,7 @@
                   <button class="btn btn-warning add-cart position-absolute">Add to cart</button>
                 </div>
                 <div class="card-body">
-                  <h6 class="mb-1">Shirt</h6>
+                  <h6 class="mb-1">Panjabi</h6>
                   <p class="mb-0 text-muted">৳ 1,150</p>
                 </div>
               </div>
@@ -454,7 +454,7 @@
                   <button class="btn btn-warning add-cart position-absolute">Add to cart</button>
                 </div>
                 <div class="card-body">
-                  <h6 class="mb-1">Punjabi</h6>
+                  <h6 class="mb-1">Shirt</h6>
                   <p class="mb-0 text-muted">৳ 2,500</p>
                 </div>
               </div>
@@ -480,7 +480,7 @@
                   <button class="btn btn-warning add-cart position-absolute">Add to cart</button>
                 </div>
                 <div class="card-body">
-                  <h6 class="mb-1">Shirt</h6>
+                  <h6 class="mb-1">Panjabi</h6>
                   <p class="mb-0 text-muted">৳ 1,050</p>
                 </div>
               </div>
